# veriforge

./: .codemap.md  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.py  setup_cython.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark.py
docs/: grammar_deps.json  grammar_support.md
examples/: README.md
examples/axi/: README.md  axi_lite_example.py  axi_stream_example.py
examples/axis_skid_buffer/: README.md  axis_skid_buf.v  test_axis_skid_buf.py
examples/basics/: README.md  alu.py  counter.py  fsm.py  shift_register.py  testbench.py
examples/composability/: README.md  design_explorer.py  pipeline_generator.py  register_bank.py
examples/darkriscv/: README.md  diag_compare.py  profile_compiled.py  run_fast.py  run_sim.py
examples/darkriscv/rtl/: config.vh  darkbridge.v  darkio.v  darkram.v  (+2 more)
examples/debug/: pe_dual.v
examples/femtorv/: LICENSE  cosim_validate.py  gen_firmware.py  run_fast.py  run_sim.py
examples/ibex/: gen_firmware.py  model_test.py  parse_test.py  run_sim.py  run_vcd.py  vcd_compare_verilator.py
examples/multi_iface_project/: README.md
examples/pause_demo/: pause_demo.py
examples/picorv32/: cosim_validate.py  gen_firmware.py  run_fast.py  run_sim.py
examples/pulp/: README.md
examples/python_testbench/: README.md  axi_stream_loopback.py  multi_domain_axis.py
examples/serv/: LICENSE  cosim_validate.py  gen_firmware.py  run_fast.py  run_sim.py
examples/taxi/: ATTRIBUTION.md  README.md
notes/: architecture.md  benchmarks.md  cli_json_schema.md  developer_guide.md  getting_started.md  known_issues.md  lark_file.md  pcache.md  public_api.md  python_overview.md  roadmap.md  semantic_model.md  simulation_overview.md  support_matrix.md  test_taxonomy.md  user_guide.md  verilog_lsp.md
notes/dsl/: dsl_benefits.md  dsl_boundary.md  dsl_conversion_coverage.md  dsl_coverage.md  dsl_guide.md
notes/plans/: architecture_review_2026-07.md  functionality_review_2026-07.md  work_plan_2026-07.md  x_prop_work.md
notes/research/: darkriscv_study.md  dsl_syntax_study.md  parser_output_formats.md  systemverilog_study.md  veri_quickbench_integration.md
notes/simulation/: bench_native_lowering.md  bench_usage.md  cosim.md  cycache.md  debug.md  endpoint_direct_usage.md  endpoint_timing_model.md  generator_tb.md  simulation_model.md  simulator_bytecode_vm.md  simulator_compile_cython.md  simulator_engines.md  simulator_python.md  testbench_phase_contract.md  wide_signal_coverage.md
src/veriforge/: __init__.py  __main__.py  preprocessor.py  project.py  scaffold.py  verilog_parser.py
tests/: conftest.py  test_partial_assign.py
tests/test_analysis/: test_block_locals.py  test_clock_reset.py  test_clock_reset_hier.py  test_const_fold.py  test_generate_improvements.py  test_interface.py  test_lint.py  test_package.py  test_struct_union.py  test_typedef_enum.py  test_width_inference.py
tests/test_dsl/: test_axi4_mem_example.py  test_axi_cdc_pulp_example.py  test_axi_fifo_pulp_example.py  test_axi_lite_dw_pulp_example.py  test_axi_lite_mailbox_pulp_example.py  test_axi_lite_regs_example.py  test_axi_lite_to_axi_pulp_example.py  test_axi_lite_xbar_pulp_example.py  test_axi_to_axi_lite_pulp_example.py  test_axi_xbar_pulp_example.py  test_builder.py  test_builder_errors_m24.py  test_builder_errors_m9.py  test_convert_to_dsl.py  test_dsl_boundary.py  test_ergonomics.py  test_examples.py  test_lib_axi.py  test_lib_cdc.py  test_lib_codec.py  test_lib_dsp.py  test_lib_fifo.py  test_lib_xilinx.py  test_module_spec.py  test_ram.py  test_roundtrip_dsl.py  test_sv_dsl.py  test_sv_interface_emit.py  test_taxi_axil_ram.py  test_taxi_axis_adapter.py  test_taxi_axis_arb_mux.py  test_taxi_axis_async_fifo.py  test_taxi_axis_async_fifo_dualclk.py  test_taxi_axis_broadcast.py  test_taxi_axis_register.py  test_testbench.py  test_testbench_bench_style.py  test_testbench_deps.py  test_testbench_enhanced.py
tests/test_formatter/: test_formatter.py
tests/test_lsp/: test_lark_fallback.py  test_navigation.py  test_symbols.py  test_trace.py
tests/test_model/: conftest.py  test_analysis.py  test_behavioral.py  test_comment_roundtrip.py  test_comments.py  test_corpus.py  test_emit_precedence.py  test_functions_generate.py  test_instances.py  test_module.py  test_roundtrip.py  test_specify.py  test_tree_to_model_characterization.py  test_typed_sv_regressions.py
tests/test_preprocessor/: test_preprocessor.py
tests/test_project/: test_darkriscv.py  test_project.py
tests/test_refactor/: test_hierarchy_graph.py
tests/test_sim/: __init__.py  test_axi_lite_master.py  test_axis_endpoints.py  test_axis_frame.py  test_bench_native.py  test_bench_plan.py  test_bench_planner.py  test_bench_runtime.py  test_combinational_coordinator.py  test_compiled.py  test_compiled_batch_run_propagation.py  test_compiled_latent_risks.py  test_coordinator_strict.py  test_darkriscv_constructs.py  test_evaluator.py  test_executor.py  test_function_task.py  test_generate.py  test_generator_endpoint.py  test_hierarchy.py  test_ibex_examples.py  test_interface_detection.py  test_membus_endpoints.py  test_memory.py  test_multi_domain_runner.py  test_param_width.py  test_planner_naming_fallback.py  test_precedence_and_fixes.py  test_pulp_axi_examples.py  test_pulp_common_cells_examples.py  test_pulp_ready_valid_examples.py  test_scheduler.py  test_sim_sv.py  test_stream_protocol.py  test_structural_patterns.py  test_testbench.py  test_value.py  test_value_widths.py  test_vcd.py  test_vm.py  (+1 more)
tests/test_validation/: test_iverilog_validation.py  test_vm_vs_reference.py
tests/test_verilog_parser/: # test_README.md  test_all.py  test_rule_examples.py  test_section_a1.py  test_section_a2.py  test_section_a6.py  test_section_a8.py  test_sv_features.py
tools/: check_overview.py  validate_compiled_pytest.py
veriforge_lsp/: __main__.py  index.py  protocol.py  server.py  workspace.py
veriforge_lsp/handlers/: extended.py  navigation.py  symbols.py  text_sync.py
(+518 files in other folders)
